# event-travel-planner

./: .env  .gitignore  Cargo.toml  diesel.toml
migrations/2020-08-23-143338_initial/: down.sql  up.sql
src/: db.rs  handlers.rs  lib.rs  main.rs  models.rs  result.rs
src/backend/: db.rs  handlers.rs  mod.rs  schema.rs
src/common/: models.rs
src/frontend/: events.rs  festivals.rs  mod.rs  routes.rs
