[package]
name = "event-travel-planner"
version = "0.1.0"
authors = ["Konstantin Stepanov <me@kstep.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
yew = "0.17.3"
yew-router = "0.14.0"
wasm-bindgen = "0.2.67"
wee_alloc = "0.4.5"
web_logger = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
diesel = { version = "1.4.5", features = ["r2d2", "sqlite"] }
dotenv = "0.15.0"
toml = "0.5.6"
envy = "0.4.1"
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-files = "0.2.2"
r2d2 = "0.8.9"
env_logger = "0.7.1"

[dependencies]
serde = "1.0.115"
serde_json = "1.0.57"
serde_derive = "1.0.115"
log = "0.4.11"
anyhow = "1.0.32"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
